add updated gradebook.js and clean up gradebook.js

--- a/jessica_smith_gradebook.html
+++ b/jessica_smith_gradebook.html
@@ -25,10 +25,7 @@
         <thead>
             <tr>
                 <th>Student Name</th>
-                <th>Assignment 1</th>
-                <th>Assignment 2</th>
-                <th>Assignment 3</th>
-                <!--Add more assignment columns as needed, we're on lesson 12 at the moment-->
+                <th>Average Grade</th>
             </tr>
         </thead>
         <tbody>
